--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     <title>Photo Blog</title>
 </head>
 <body>
+    <!-- intestazine pagina -->
+     <header>
+        <h1>ESTATE '24</h1>
+     </header>
     <script src="js/script.js"></script>
 </body>
 </html>
