draft[main-card]

--- a/index.html
+++ b/index.html
@@ -23,6 +23,27 @@
      <header>
         <h1>ESTATE '24</h1>
      </header>
+
+    <!-- corpo pagina-->
+    <main>
+
+        <!-- CARDS -->
+        <div class="container d-flex col-9 justify-content-center flex-wrap">
+
+            <div class="card m-5" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+
+        </div>
+
+    </main>
+
+    <!-- cartella js -->
     <script src="js/script.js"></script>
 </body>
 </html>
