feat[modal-img-button]

--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@
 
         </div>
 
+        <!-- MODAL IMG E BUTTON -->
+        <!-- Modal -->
+        <div id="imageModal" class="modal">
+            <div class="modal-content">
+            <button class="close-button">Chiudi</button>
+            <img id="modalImage" src="" alt="Immagine Modal">
+            </div>
+        </div>
+  
+
     </main>
 
     <!-- cartella js -->
